--- a/about.html
+++ b/about.html
@@ -11,10 +11,56 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>AR-Frontend Development</title>
 </head>
 <body>
-    
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Adrienne R</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="about.html">About Me</a>
+                <a class="nav-link" href="about.html#contact">Contact Me</a>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="body-text text-center m-3 p-5">
+    <h1>About me</h1>
+    <h3>Front-end developer from Prague, Czech Republic</h3>
+    <p class="text-center">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+    </p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="images/yoga_home.png" class="img-fluid rounded shadow border p-2" alt="yoga app"/>
+            </div>
+            <div class="col-sm-4">
+                <img src="images/weather_home.png" class="img-fluid rounded shadow border p-2" alt="weather app"/>
+            </div>
+            <div class="col-sm-4">
+                <img src="images/yogurt_home.png" class="img-fluid rounded shadow border p-2" alt="yogurt app"/>
+            </div>
+        </div>
+    </div>
+
+    <div id="contact" class="mt-5">
+        <h2>Contact me</h2>
+        <a href="mailto:fakeemail@gmail.com" class="email-link">
+            fakeemail@gmail.com
+        </a>
+    </div>
+</div>
 </body>
 </html>
