--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <title>AR-Frontend Development</title>
+    <style>
+        @media (max-width: 600px) {
+        p { text-align: center;
+        }
+    }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
