@media added to h1
test 2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>AR-Frontend Development</title>
     <style>
         @media (max-width: 600px) {
-        p { text-align: center;
+        h1 { 
+        text-align: center;
         }
     }
     </style>
