--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>AR-Frontend Development</title>
     <style>
         @media (max-width: 600px) {
-        h2 { 
+        .project-name { 
         text-align: center;
         }
     }
