@media  added to .app-link
test 4 successful. now test 5 to add .app-link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>AR-Frontend Development</title>
     <style>
         @media (max-width: 600px) {
-        .project-name { 
+        .project-name,
+        .app-link { 
         text-align: center;
         }
     }
