--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <title>AR-Frontend Development</title>
     <style>
         @media (max-width: 600px) {
-        .project-name,
-        .app-link { 
+        .project-name { 
         text-align: center;
+        }
+        .app-link {
+        position: absolute;
         }
     }
     </style>
